//
//  ContentView.swift
//  SportiliApp
//
//  Created by Matteo Ercolino on 31/05/24.
//

import SwiftUI

struct ContentView: View {
    
    var body: some View {
        TabView {
            NavigationStack {
                HomeView()
            }
                .tabItem {
                    Image(systemName: "list.clipboard.fill")
                    Text("Scheda")
                        .montserrat(size: 12)
                }

            NavigationStack {
                AlertsView()
            }
                .tabItem {
                    Image(systemName: "bell.fill")
                    Text("Avvisi")
                        .montserrat(size: 12)
                }

            NavigationStack {
                SettingsView()
            }
                .tabItem {
                    Image(systemName: "gearshape.fill")
                    Text("Impostazioni")
                        .montserrat(size: 12)
                }
        }
    }
}

#Preview {
    ContentView()
}
